Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 3.0.0 (??/??/????):
	AIM and ICQ:
	* Make buddy list management code more efficient. (Oliver) (#4816)

version 2.8.0 (??/??/????):
	General:
	* Implement simple silence suppression for voice calls, preventing
	  wasted bandwidth for silent periods during a call. (Jakub Adam)
	  (half of #13180)
	* Added the DigiCert High Assurance CA-3 intermediate CA, needed for
	  validation of the Facebook XMPP interface's certificate.
	* Removed the QQ protocol plugin.  It hasn't worked in a long time and
	  isn't being maintained, therefore we no longer want it.

	Pidgin:
	* Duplicate code cleanup.  (Gabriel Schulhof) (#10599)
	* Voice/Video call window adapts correctly to adding or removing
	  streams on the fly. (Jakub Adam) (half of #13535)
	* Don't cancel an ongoing call when rejecting the addition of a
	  stream to the existing call. (Jakub Adam) (#13537)
	* Pidgin plugins can now override tab completion and detect clicks on
	  usernames in the chat userlist. (kawaii.neko) (#12599)

	libpurple:
	* media: Allow obtaining active local and remote candidates. (Jakub
	  Adam) (#11830)
	* media: Allow getting/setting video capabilities. (Jakub Adam) (half
	  of #13095)
	* Simple Silence Suppression is optional per-account. (Jakub Adam)
	  (half of #13180)
	* Fix purple-url-handler being unable to find an account.
	* media: Allow adding/removing streams on the fly. (Jakub Adam)
	  (half of #13535)
	* Support new connection states in NetworkManager 0.9. (Dan Williams)
	  (#13505)
	* When removing a buddy, delete the pounces associated with it.
	  (Kartik Mohta) (#1131)
	* media: Allow libpurple and plugins to set SDES properties for RTP
	  conferences. (Jakub Adam) (#12981)
	* proxy: Add new "Tor/Privacy" proxy type that can be used to
	  restrict operations that could leak potentially sensitive data
	  (e.g. DNS queries).  (#11110, #13928)

	Gadu-Gadu: